--- a/index.html
+++ b/index.html
@@ -449,8 +449,7 @@
             <div class="preview-section">
                 <div class="section-header">
                     <h2 class="section-title">Prévia</h2>
-                    <p class="section-subtitle">Esta é exatamente a marcação que será copiada como <em>HTML</em>.<br>
-                    Largura do cartão simula o corpo do e-mail</p>
+                    <p class="section-subtitle">Esta é exatamente a marcação que será copiada como <em>HTML</em>.</p>
                 </div>
                 <div class="preview-container">
                     <div id="signaturePreview"></div>
@@ -463,14 +462,6 @@
                     <button class="btn btn-secondary" onclick="showHTMLCode()">
                         Visualizar código HTML
                     </button>
-                </div>
-
-                <div class="instructions" style="margin-top: 20px;">
-                    Dica: no Gmail, abra 
-                    <span class="instructions-path">
-                        <span>Configurações</span> → <span>Ver todas</span> → <span>Geral</span> → <span>Assinatura</span>
-                    </span>
-                    e cole na área de edição.
                 </div>
             </div>
 
