--- a/index.html
+++ b/index.html
@@ -13,15 +13,49 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: #1a1a1f;
             min-height: 100vh;
             color: #ffffff;
-            padding: 40px 20px;
+            padding: 20px;
+            position: relative;
+            overflow-x: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Background com imagem fixa */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: url('https://ialab.fsbholding.com.br/backgrounds/login-background-5.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            z-index: -2;
+        }
+
+        /* Overlay escuro sobre a imagem */
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.4);
+            z-index: -1;
         }
 
         .container {
             max-width: 1200px;
+            width: 100%;
             margin: 0 auto;
+            position: relative;
+            z-index: 1;
         }
 
         .header {
@@ -35,14 +69,16 @@
             font-size: 24px;
             font-weight: 600;
             color: #ffffff;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
         }
 
         .header-info {
             display: flex;
             align-items: center;
             gap: 8px;
-            color: #888;
+            color: rgba(255, 255, 255, 0.9);
             font-size: 14px;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
         }
 
         .header-info::before {
@@ -58,11 +94,16 @@
             margin-bottom: 30px;
         }
 
-        .preview-section {
-            background: #25252b;
+        /* Glassmorphism para os blocos */
+        .preview-section,
+        .form-section {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             border-radius: 12px;
             padding: 30px;
-            border: 1px solid #2a2a32;
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
         }
 
         .section-header {
@@ -74,34 +115,29 @@
             font-weight: 600;
             color: #ffffff;
             margin-bottom: 8px;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.3);
         }
 
         .section-subtitle {
             font-size: 13px;
-            color: #888;
+            color: rgba(255, 255, 255, 0.8);
             line-height: 1.5;
         }
 
         .preview-container {
-            background: #ffffff;
+            background: rgba(255, 255, 255, 0.95);
             border-radius: 8px;
             padding: 30px;
             margin-top: 20px;
             min-height: 400px;
             overflow: auto;
             color: #000000;
-        }
-
-        .form-section {
-            background: #25252b;
-            border-radius: 12px;
-            padding: 30px;
-            border: 1px solid #2a2a32;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.1);
         }
 
         .form-info {
             font-size: 13px;
-            color: #888;
+            color: rgba(255, 255, 255, 0.8);
             margin-bottom: 25px;
             line-height: 1.5;
         }
@@ -115,7 +151,7 @@
             margin-bottom: 10px;
             font-size: 12px;
             font-weight: 500;
-            color: #888;
+            color: rgba(255, 255, 255, 0.9);
             text-transform: uppercase;
             letter-spacing: 0.5px;
         }
@@ -123,27 +159,28 @@
         .form-group input {
             width: 100%;
             padding: 12px 16px;
-            background: #1a1a1f;
-            border: 1px solid #2a2a32;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 8px;
             font-size: 14px;
             color: #ffffff;
             transition: all 0.2s ease;
+            backdrop-filter: blur(5px);
         }
 
         .form-group input::placeholder {
-            color: #555;
+            color: rgba(255, 255, 255, 0.5);
         }
 
         .form-group input:focus {
             outline: none;
-            border-color: #4ade80;
-            background: #1f1f24;
+            border-color: rgba(255, 255, 255, 0.4);
+            background: rgba(255, 255, 255, 0.15);
         }
 
         .form-group input:disabled {
-            background: #15151a;
-            color: #555;
+            background: rgba(0, 0, 0, 0.2);
+            color: rgba(255, 255, 255, 0.4);
             cursor: not-allowed;
         }
 
@@ -151,15 +188,15 @@
         .toggle-group {
             margin-bottom: 20px;
             padding: 16px;
-            background: #1a1a1f;
+            background: rgba(255, 255, 255, 0.05);
             border-radius: 10px;
-            border: 1px solid #2a2a32;
+            border: 1px solid rgba(255, 255, 255, 0.1);
             transition: all 0.3s ease;
         }
 
         .toggle-group:hover {
-            border-color: #3a3a42;
-            background: #1d1d22;
+            border-color: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.08);
         }
 
         .toggle-content {
@@ -185,15 +222,15 @@
             position: relative;
             width: 52px;
             height: 28px;
-            background: #2a2a32;
+            background: rgba(255, 255, 255, 0.2);
             border-radius: 14px;
             cursor: pointer;
             transition: all 0.3s ease;
-            border: 2px solid #333;
+            border: 2px solid rgba(255, 255, 255, 0.3);
         }
 
         .toggle-switch:hover {
-            border-color: #444;
+            border-color: rgba(255, 255, 255, 0.4);
         }
 
         .toggle-switch.active {
@@ -231,7 +268,7 @@
 
         .toggle-status.off {
             left: 26px;
-            color: #666;
+            color: rgba(255, 255, 255, 0.6);
         }
 
         .toggle-status.on {
@@ -241,7 +278,7 @@
 
         .form-help {
             font-size: 12px;
-            color: #666;
+            color: rgba(255, 255, 255, 0.6);
             margin-top: 8px;
         }
 
@@ -261,6 +298,7 @@
             cursor: pointer;
             transition: all 0.2s ease;
             text-align: center;
+            backdrop-filter: blur(10px);
         }
 
         .btn-primary {
@@ -270,45 +308,32 @@
 
         .btn-primary:hover {
             background: #2563eb;
+            transform: translateY(-1px);
         }
 
         .btn-secondary {
-            background: #2a2a32;
-            color: #888;
-            border: 1px solid #333;
+            background: rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.9);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .btn-secondary:hover {
-            background: #333;
-            color: #fff;
+            background: rgba(255, 255, 255, 0.15);
+            border-color: rgba(255, 255, 255, 0.3);
         }
 
         .btn-reset {
             width: 100%;
             margin-top: 12px;
-            background: transparent;
-            color: #888;
-            border: 1px solid #2a2a32;
+            background: rgba(255, 255, 255, 0.05);
+            color: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .btn-reset:hover {
-            border-color: #444;
+            border-color: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.08);
             color: #fff;
-        }
-
-        .instructions {
-            font-size: 13px;
-            color: #666;
-            line-height: 1.6;
-        }
-
-        .instructions-path {
-            color: #888;
-            margin-top: 8px;
-        }
-
-        .instructions-path span {
-            color: #4ade80;
         }
 
         /* Animação do campo de telefone */
@@ -339,7 +364,7 @@
             z-index: 1000;
             align-items: center;
             justify-content: center;
-            backdrop-filter: blur(4px);
+            backdrop-filter: blur(8px);
         }
 
         .modal.active {
@@ -347,7 +372,8 @@
         }
 
         .modal-content {
-            background: #25252b;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(20px);
             border-radius: 12px;
             width: 90%;
             max-width: 800px;
@@ -355,12 +381,13 @@
             overflow: hidden;
             display: flex;
             flex-direction: column;
-            border: 1px solid #2a2a32;
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
         }
 
         .modal-header {
             padding: 20px 24px;
-            border-bottom: 1px solid #2a2a32;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -379,7 +406,7 @@
         }
 
         .code-container {
-            background: #1a1a1f;
+            background: rgba(0, 0, 0, 0.4);
             color: #d4d4d4;
             padding: 20px;
             border-radius: 8px;
@@ -389,9 +416,25 @@
             overflow-x: auto;
             white-space: pre-wrap;
             word-wrap: break-word;
-            border: 1px solid #2a2a32;
+            border: 1px solid rgba(255, 255, 255, 0.1);
             max-height: 60vh;
             overflow-y: auto;
+        }
+
+        .modal-close {
+            padding: 8px 20px;
+            font-size: 14px;
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            color: rgba(255, 255, 255, 0.9);
+            border-radius: 8px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .modal-close:hover {
+            background: rgba(255, 255, 255, 0.15);
+            border-color: rgba(255, 255, 255, 0.3);
         }
 
         /* Toast de sucesso */
@@ -422,6 +465,11 @@
         }
 
         @media (max-width: 768px) {
+            body {
+                align-items: flex-start;
+                padding: 20px;
+            }
+            
             .main-grid {
                 grid-template-columns: 1fr;
             }
@@ -515,14 +563,14 @@
                     <button class="btn btn-primary" onclick="copyHTMLCode()" style="padding: 8px 20px; font-size: 14px;">
                         Copiar código
                     </button>
-                    <button class="modal-close" onclick="closeModal()" style="padding: 8px 20px; font-size: 14px; background: transparent; border: 1px solid #666; color: #888; border-radius: 8px;">
+                    <button class="modal-close" onclick="closeModal()">
                         Fechar
                     </button>
                 </div>
             </div>
             <div class="modal-body">
                 <div class="code-container" id="htmlCode"></div>
-                <p style="color: #666; font-size: 13px; margin-top: 20px; padding-top: 20px; border-top: 1px solid #2a2a32;">
+                <p style="color: rgba(255, 255, 255, 0.6); font-size: 13px; margin-top: 20px; padding-top: 20px; border-top: 1px solid rgba(255, 255, 255, 0.1);">
                     Este é o mesmo HTML usado na cópia para o Gmail.
                 </p>
             </div>
