--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url('https://ialab.fsbholding.com.br/backgrounds/login-background-5.jpg');
+            background-image: url('https://fsb-augusto.github.io/assinatura/AdobeStock_799448593.avif');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
